# ffmpeg-android

./: README.md
build_script/: build_android_all.sh  build_android_arm64_v8a.sh  build_android_armeabi.sh  build_android_armeabi_v7a.sh  build_android_x86.sh  build_android_x86_64.sh
ffmpegApp/app/: build.gradle
ffmpegApp/app/src/main/: AndroidManifest.xml
ffmpegApp/app/src/main/cpp/: CMakeLists.txt
ffmpegApp/app/src/main/cpp/src/: Common.cpp  Common.h  Java_com_center_player_MainActivity.cpp
ffmpegApp/app/src/main/java/com/center/player/: BaseActivity.java  MainActivity.java
ffmpegApp/app/src/main/res/layout/: activity_main.xml
ffmpegApp/gradle/wrapper/: gradle-wrapper.properties
